Fixed thank you page on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
 			  padding: 0;
 			  margin: 0;
 			  background: transparent;
+			  margin-top: 100px;
 		  }
 		  .hero-unit h1 {
 			  font-size: 250%;
